--- a/client/players/list.html
+++ b/client/players/list.html
@@ -2,7 +2,7 @@
   <ul class="players">
     {{#each players}}
       <li class="players__player">
-        <button type="submit" class="players__remove_btn" title="Remove this player">&times;</button>
+        <button class="players__remove_btn js-players__remove_btn" title="Remove this player">&times;</button>
         <span class="players__name">{{this}}</span>
       </li>
     {{/each}}
